--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 									<h2>The Spectators</h2>
 									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
 								</article>
+								<article class="item thumb span-2">
+									<h2>The countryside for myself</h2>
+									<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt=""></a>
+								</article>
 
 							</div>
 
@@ -85,6 +89,17 @@
 								<article class="item thumb span-1"><h2>Elysium</h2><a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt=""></a></article>
 
 							</div>
+
+						<!-- Items -->
+						<div style="text-align: center">
+							<h1>Maxwell's NLP projects</h1>
+							<p>
+								<a href="https://psmaxwell.github.io/"> Maxwell </a> is a web-site with programing
+								problems and exercises for beginners.<br/>Some of them use additional demo and test
+								materials which are represented by
+								<a href="https://psmaxwell.github.io/test">these github projects</a>.
+							</p>
+						</div>
 
 					</section>
 
